test_scores/negative_dimers/features/Q53T94.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q53T94.pkl.xz